# ps2x2pico

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  hid2mac.uf2  logger.h  ps2dev.pio  ps2device.pio  ps2kb.c  ps2ms.c  ps2phy.c  ps2phy.h  ps2phy.pio  ps2ports.pio  ps2transceiver.c  ps2transceiver.h  ps2x2pico-boot.uf2  ps2x2pico-report.uf2  ps2x2pico.c  ps2x2pico.h  ps2x2pico.uf2  tinyusb-0.17.0-dualusb.patch  tusb_config.h
freecad/: case.FCStd
kicad/: Logic_Level_Bidirectional-eagle-import.kicad_sym  fp-info-cache  fp-lib-table  ps2_pico_hat.kicad_pcb  ps2_pico_hat.kicad_prl  ps2_pico_hat.kicad_pro  ps2_pico_hat.kicad_sch  sym-lib-table
kicad/Library.pretty/: KMDGX-6S-BS.kicad_mod
kicad/bom/: ibom.html
kicad/gerbers/: ps2_pico_hat-B_Cu.gbr  ps2_pico_hat-B_Mask.gbr  ps2_pico_hat-B_Paste.gbr  ps2_pico_hat-B_Silkscreen.gbr  ps2_pico_hat-Edge_Cuts.gbr  ps2_pico_hat-F_Cu.gbr  ps2_pico_hat-F_Mask.gbr  ps2_pico_hat-F_Paste.gbr  ps2_pico_hat-F_Silkscreen.gbr  ps2_pico_hat-NPTH.drl  ps2_pico_hat-PTH.drl  ps2_pico_hat-job.gbrjob
kicad/ps2_pico_hat.pretty/: 0603-RES.kicad_mod  1X06.kicad_mod  MICRO-FIDUCIAL.kicad_mod  OSHW-LOGO-S.kicad_mod  SFE_LOGO_FLAME_.1.kicad_mod  SOT23-3.kicad_mod
openscad/: bottom.scad  cable_holes.scad  chamfered_section.scad  pi_pico.scad  ps2x2pico_case.scad  rings.scad  support_posts.scad  top.scad  usb_socket.scad
src/: macphy.pio  ps2in.c  ps2in.h  ps2in.pio  ps2kb.c  ps2kbd.c  ps2ms.c  ps2out.c  ps2out.h  ps2out.pio  ps2phy.c  ps2phy.h  ps2phy.pio  ps2pt.c  ps2pt.h  ps2pt.pio  ps2x2pico.c  ps2x2pico.h  scancodes.c  scancodesets.c  scancodesets.h  tusb_config.h  usbin.c  utils.c  utils.h
